# ddo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/languages/: languages.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PACKAGING.md
packaging/: ddo.desktop
packaging/completions/: ddo.bash
packaging/debian/: changelog  control  copyright  rules
packaging/man/: ddo.1
packaging/polkit/: com.github.apapamarkou.ddo.policy
scripts/: run_ci.sh  smoke_test.py
src/ddo/: __init__.py
src/ddo/backend/: __init__.py  apt.py  cleanup.py  detection.py  exceptions.py  fonts.py  inputmethods.py  languages.py  packages.py  restore.py  services.py
src/ddo/models/: config.py
src/ddo/ui/cli/: main.py
src/ddo/ui/qt/: app.py  mainwindow.py  wizard.py  worker.py
src/ddo/ui/qt/tabs/: about.py  components.py  languages.py  logs.py  overview.py  updates.py
src/ddo/utils/: formatting.py  logging_setup.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_apt.py  test_cleanup.py  test_config.py  test_detection.py  test_languages.py  test_misc.py  test_packages.py  test_restore.py
