[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-desktop-optimizer"
version = "1.0.0"
description = "Remove bloatware from fresh Debian desktop installations"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Debian Desktop Optimizer Contributors" }]
requires-python = ">=3.13"
keywords = ["debian", "linux", "cleanup", "bloatware", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "PyQt6>=6.6",
    "typer[all]>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.0",
    "types-PyYAML",
    "pre-commit>=3.7",
]

[project.scripts]
ddo = "ddo.ui.cli.main:main"
ddo-gui = "ddo.ui.qt.app:main"

[project.urls]
Homepage = "https://github.com/apapamarkou/ddo"
Repository = "https://github.com/apapamarkou/ddo"
Issues = "https://github.com/apapamarkou/ddo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ddo" = ["py.typed"]
"*" = ["*.yaml", "*.yml", "*.png", "*.svg", "*.desktop"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line too long — handled by formatter
    "B008",     # do not perform function calls in default arguments (typer pattern)
    "N806",     # variable in function should be lowercase (Qt pattern Q*)
    "SIM108",   # use ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["ddo"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py313"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "integration: integration tests that may require system access",
    "gui: tests that require a display",
]

[tool.coverage.run]
source = ["src/ddo"]
omit = ["*/ui/qt/*", "*/ui/cli/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
